@@ -193,100 +193,206 @@ describe Project, '#reports' do
 end
 
 
-describe Buildr::Release, '#make' do
-  before do
-    write 'buildfile', "VERSION_NUMBER = '1.0.0-SNAPSHOT'"
-    # Prevent a real call to a spawned buildr process.
-    Release.stub!(:buildr)
-    Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/trunk')
-    Svn.stub!(:uncommitted_files).and_return('')
-    Svn.stub!(:remove)
-    Svn.stub!(:copy)
-    Svn.stub!(:commit)
-  end
+describe Buildr::Release do
   
-  it 'should tag a release with the release version' do
-    Svn.should_receive(:copy).with(Dir.pwd, 'http://my.repo.org/foo/tags/1.0.0', 'Release 1.0.0').and_return {
-      file('buildfile').should contain('VERSION_NUMBER = "1.0.0"')
-    }
-    Release.make
-  end
-  
-  it 'should update the buildfile with the next version number' do
-    Release.make
-    file('buildfile').should contain('VERSION_NUMBER = "1.0.1-SNAPSHOT"')
-  end
-  
-  it 'should commit the updated buildfile' do
-    Svn.should_receive(:commit).with(File.expand_path('buildfile'), 'Changed version number to 1.0.1-SNAPSHOT').and_return {
+  describe '#make' do
+    before do
+      write 'buildfile', "VERSION_NUMBER = '1.0.0-SNAPSHOT'"
+      # Prevent a real call to a spawned buildr process.
+      Release.stub!(:buildr)
+      Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/trunk')
+      Svn.stub!(:uncommitted_files).and_return('')
+      Svn.stub!(:remove)
+      Svn.stub!(:copy)
+      Svn.stub!(:commit)
+    end
+    
+    it 'should tag a release with the release version' do
+      Svn.should_receive(:copy).with(Dir.pwd, 'http://my.repo.org/foo/tags/1.0.0', 'Release 1.0.0').and_return {
+        file('buildfile').should contain('VERSION_NUMBER = "1.0.0"')
+      }
+      Release.make
+    end
+
+    it 'should update the buildfile with the next version number' do
+      Release.make
       file('buildfile').should contain('VERSION_NUMBER = "1.0.1-SNAPSHOT"')
-    }
-    Release.make
+    end
+
+    it 'should commit the updated buildfile' do
+      Svn.should_receive(:commit).with(File.expand_path('buildfile'), 'Changed version number to 1.0.1-SNAPSHOT').and_return {
+        file('buildfile').should contain('VERSION_NUMBER = "1.0.1-SNAPSHOT"')
+      }
+      Release.make
+    end    
   end
-end
 
 
-describe Buildr::Release, '#check' do
-  before do
-    Svn.stub!(:uncommitted_files).and_return('')
-  end
-  
-  it 'should accept to release from the trunk' do
-    Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/trunk')
-    lambda { Release.check }.should_not raise_error
-  end
-  
-  it 'should accept to release from a branch' do
-    Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/branches/1.0')
-    lambda { Release.check }.should_not raise_error
-  end
-  
-  it 'should reject releasing from a tag' do
-    Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/tags/1.0.0')
-    lambda { Release.check }.should raise_error(RuntimeError, "SVN URL must contain 'trunk' or 'branches/...'")
-  end
-  
-  it 'should reject a non standard repository layout' do
-    Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/bar')
-    lambda { Release.check }.should raise_error(RuntimeError, "SVN URL must contain 'trunk' or 'branches/...'")
-  end
-  
-  it 'should reject an uncommitted file' do
-    Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/trunk')
-    Svn.stub!(:uncommitted_files).and_return('M      foo.rb')
-    lambda { Release.check }.should raise_error(RuntimeError,
-      "Uncommitted SVN files violate the First Principle Of Release!\n" +
-      "M      foo.rb")
-  end
-end
-  
+  describe '#check' do
+    before do
+      Svn.stub!(:uncommitted_files).and_return('')
+    end
 
-describe Buildr::Release, '#extract_version' do
-  
-  it 'should extract VERSION_NUMBER with single quotes' do
-    write 'buildfile', "VERSION_NUMBER = '1.0.0-SNAPSHOT'"
-    Release.extract_version.should == '1.0.0-SNAPSHOT'
+    it 'should accept to release from the trunk' do
+      Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/trunk')
+      lambda { Release.check }.should_not raise_error
+    end
+
+    it 'should accept to release from a branch' do
+      Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/branches/1.0')
+      lambda { Release.check }.should_not raise_error
+    end
+
+    it 'should reject releasing from a tag' do
+      Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/tags/1.0.0')
+      lambda { Release.check }.should raise_error(RuntimeError, "SVN URL must contain 'trunk' or 'branches/...'")
+    end
+
+    it 'should reject a non standard repository layout' do
+      Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/bar')
+      lambda { Release.check }.should raise_error(RuntimeError, "SVN URL must contain 'trunk' or 'branches/...'")
+    end
+
+    it 'should reject an uncommitted file' do
+      Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/trunk')
+      Svn.stub!(:uncommitted_files).and_return('M      foo.rb')
+      lambda { Release.check }.should raise_error(RuntimeError,
+        "Uncommitted SVN files violate the First Principle Of Release!\n" +
+        "M      foo.rb")
+    end
   end
   
-  it 'should extract VERSION_NUMBER with double quotes' do
-    write 'buildfile', %{VERSION_NUMBER = "1.0.1-SNAPSHOT"}
-    Release.extract_version.should == '1.0.1-SNAPSHOT'
+  
+  describe '#extract_version' do
+    it 'should extract VERSION_NUMBER with single quotes' do
+      write 'buildfile', "VERSION_NUMBER = '1.0.0-SNAPSHOT'"
+      Release.extract_version.should == '1.0.0-SNAPSHOT'
+    end
+
+    it 'should extract VERSION_NUMBER with double quotes' do
+      write 'buildfile', %{VERSION_NUMBER = "1.0.1-SNAPSHOT"}
+      Release.extract_version.should == '1.0.1-SNAPSHOT'
+    end
+
+    it 'should extract VERSION_NUMBER without any spaces' do
+      write 'buildfile', "VERSION_NUMBER='1.0.2-SNAPSHOT'"
+      Release.extract_version.should == '1.0.2-SNAPSHOT'
+    end
+
+    it 'should extract THIS_VERSION as an alternative to VERSION_NUMBER' do
+      write 'buildfile', "THIS_VERSION = '1.0.3-SNAPSHOT'"
+      Release.extract_version.should == '1.0.3-SNAPSHOT'
+    end
+
+    it 'should complain if no current version number' do
+      write 'buildfile', 'define foo'
+      lambda { Release.extract_version }.should raise_error('Looking for THIS_VERSION = "..." in your Buildfile, none found')
+    end
+  end
+
+
+  # Reference: http://svnbook.red-bean.com/en/1.4/svn.reposadmin.planning.html#svn.reposadmin.projects.chooselayout
+  describe '#tag url' do
+    it 'should accept to tag foo/trunk' do
+      Release.tag_url('http://my.repo.org/foo/trunk', '1.0.0').should == 'http://my.repo.org/foo/tags/1.0.0'
+    end
+
+    it 'should accept to tag foo/branches/1.0' do
+      Release.tag_url('http://my.repo.org/foo/branches/1.0', '1.0.1').should == 'http://my.repo.org/foo/tags/1.0.1'
+    end
+
+    it 'should accept to tag trunk/foo' do
+      Release.tag_url('http://my.repo.org/trunk/foo', '1.0.0').should == 'http://my.repo.org/tags/foo/1.0.0'
+    end
+
+    it 'should accept to tag branches/foo/1.0' do
+      Release.tag_url('http://my.repo.org/branches/foo/1.0', '1.0.0').should == 'http://my.repo.org/tags/foo/1.0.0'
+    end
+    
+    it 'should use tag specified by tag_name' do
+      Release.tag_name  = 'first'
+      Release.tag_url('http://my.repo.org/foo/trunk', '1.0.0').should == 'http://my.repo.org/foo/tags/first'
+    end
+    
+    it 'should use tag returned by tag_name if tag_name is a proc' do
+      Release.tag_name  = lambda { |version| "buildr-#{version}" }
+      Release.tag_url('http://my.repo.org/foo/trunk', '1.0.0').should == 'http://my.repo.org/foo/tags/buildr-1.0.0'
+    end
+    
+    after { Release.tag_name = nil }
+  end
+
+
+  describe '#with_release_candidate_version' do
+    before do
+      Buildr.application.stub!(:buildfile).and_return(file('buildfile'))
+      write 'buildfile', "THIS_VERSION = '1.1.0-SNAPSHOT'"
+    end
+
+    it 'should yield the name of the release candidate buildfile' do
+      Release.send :with_release_candidate_version do |new_filename|
+        File.read(new_filename).should == %{THIS_VERSION = "1.1.0"}
+      end
+    end
+
+    it 'should yield a name different from the original buildfile' do
+      Release.send :with_release_candidate_version do |new_filename|
+        new_filename.should_not point_to_path('buildfile')
+      end
+    end
+  end
+
+
+  describe '#tag_release' do
+    before do
+      write 'buildfile', "THIS_VERSION = '1.0.1'"
+      Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/trunk')
+      Svn.stub!(:copy)
+      Svn.stub!(:remove)
+    end
+
+    it 'should tag the working copy' do
+      Svn.should_receive(:copy).with(Dir.pwd, 'http://my.repo.org/foo/tags/1.0.1', 'Release 1.0.1')
+      Release.send :tag_release
+    end
+
+    it 'should remove the tag if it already exists' do
+      Svn.should_receive(:remove).with('http://my.repo.org/foo/tags/1.0.1', 'Removing old copy')
+      Release.send :tag_release
+    end
+
+    it 'should accept that the tag does not exist' do
+      Svn.stub!(:remove).and_raise(RuntimeError)
+      Release.send :tag_release
+    end
+
+    it 'should inform the user' do
+      lambda { Release.send :tag_release }.should show_info('Tagging release 1.0.1')
+    end
+  end
+
+
+  describe '#commit_new_snapshot' do
+    before do
+      write 'buildfile', 'THIS_VERSION = "1.0.0"'
+      Svn.stub!(:commit)
+    end
+
+    it 'should update the buildfile with a new version number' do
+      Release.send :commit_new_snapshot
+      file('buildfile').should contain('THIS_VERSION = "1.0.1-SNAPSHOT"')
+    end
+
+    it 'should commit the new buildfile on the trunk' do
+      Svn.should_receive(:commit).with(File.expand_path('buildfile'), 'Changed version number to 1.0.1-SNAPSHOT')
+      Release.send :commit_new_snapshot
+    end
+
+    it 'should inform the user of the new version' do
+      lambda { Release.send :commit_new_snapshot }.should show_info('Current version is now 1.0.1-SNAPSHOT')
+    end
   end
   
-  it 'should extract VERSION_NUMBER without any spaces' do
-    write 'buildfile', "VERSION_NUMBER='1.0.2-SNAPSHOT'"
-    Release.extract_version.should == '1.0.2-SNAPSHOT'
-  end
-  
-  it 'should extract THIS_VERSION as an alternative to VERSION_NUMBER' do
-    write 'buildfile', "THIS_VERSION = '1.0.3-SNAPSHOT'"
-    Release.extract_version.should == '1.0.3-SNAPSHOT'
-  end
-  
-  it 'should complain if no current version number' do
-    write 'buildfile', 'define foo'
-    lambda { Release.extract_version }.should raise_error('Looking for THIS_VERSION = "..." in your Buildfile, none found')
-  end
 end
 
 
@@ -305,96 +411,5 @@ Last Changed Rev: 110
 Last Changed Date: 2008-08-19 12:00:00 +0200 (Tue, 19 Aug 2008)
 EOF
     Svn.repo_url.should == 'http://my.repo.org/foo/trunk'
-  end
-end
-
-
-# Reference: http://svnbook.red-bean.com/en/1.4/svn.reposadmin.planning.html#svn.reposadmin.projects.chooselayout
-describe Buildr::Release, '#tag url' do
-  it 'should accept to tag foo/trunk' do
-    Release.tag_url('http://my.repo.org/foo/trunk', '1.0.0').should == 'http://my.repo.org/foo/tags/1.0.0'
-  end
-  
-  it 'should accept to tag foo/branches/1.0' do
-    Release.tag_url('http://my.repo.org/foo/branches/1.0', '1.0.1').should == 'http://my.repo.org/foo/tags/1.0.1'
-  end
-  
-  it 'should accept to tag trunk/foo' do
-    Release.tag_url('http://my.repo.org/trunk/foo', '1.0.0').should == 'http://my.repo.org/tags/foo/1.0.0'
-  end
-  
-  it 'should accept to tag branches/foo/1.0' do
-    Release.tag_url('http://my.repo.org/branches/foo/1.0', '1.0.0').should == 'http://my.repo.org/tags/foo/1.0.0'
-  end
-end
-
-
-describe Buildr::Release, '#with_release_candidate_version' do
-  before do
-    Buildr.application.stub!(:buildfile).and_return(file('buildfile'))
-    write 'buildfile', "THIS_VERSION = '1.1.0-SNAPSHOT'"
-  end
-  
-  it 'should yield the name of the release candidate buildfile' do
-    Release.send :with_release_candidate_version do |new_filename|
-      File.read(new_filename).should == %{THIS_VERSION = "1.1.0"}
-    end
-  end
-  
-  it 'should yield a name different from the original buildfile' do
-    Release.send :with_release_candidate_version do |new_filename|
-      new_filename.should_not point_to_path('buildfile')
-    end
-  end
-end
-
-
-describe Buildr::Release, '#tag_release' do
-  before do
-    write 'buildfile', "THIS_VERSION = '1.0.1'"
-    Svn.stub!(:repo_url).and_return('http://my.repo.org/foo/trunk')
-    Svn.stub!(:copy)
-    Svn.stub!(:remove)
-  end
-  
-  it 'should tag the working copy' do
-    Svn.should_receive(:copy).with(Dir.pwd, 'http://my.repo.org/foo/tags/1.0.1', 'Release 1.0.1')
-    Release.send :tag_release
-  end
-  
-  it 'should remove the tag if it already exists' do
-    Svn.should_receive(:remove).with('http://my.repo.org/foo/tags/1.0.1', 'Removing old copy')
-    Release.send :tag_release
-  end
-  
-  it 'should accept that the tag does not exist' do
-    Svn.stub!(:remove).and_raise(RuntimeError)
-    Release.send :tag_release
-  end
-  
-  it 'should inform the user' do
-    lambda { Release.send :tag_release }.should show_info('Tagging release 1.0.1')
-  end
-end
-
-
-describe Buildr::Release, '#commit_new_snapshot' do
-  before do
-    write 'buildfile', 'THIS_VERSION = "1.0.0"'
-    Svn.stub!(:commit)
-  end
-  
-  it 'should update the buildfile with a new version number' do
-    Release.send :commit_new_snapshot
-    file('buildfile').should contain('THIS_VERSION = "1.0.1-SNAPSHOT"')
-  end
-  
-  it 'should commit the new buildfile on the trunk' do
-    Svn.should_receive(:commit).with(File.expand_path('buildfile'), 'Changed version number to 1.0.1-SNAPSHOT')
-    Release.send :commit_new_snapshot
-  end
-  
-  it 'should inform the user of the new version' do
-    lambda { Release.send :commit_new_snapshot }.should show_info('Current version is now 1.0.1-SNAPSHOT')
   end
 end
